[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planned-rand-crop"
version = "0.1.0"
description = "Planned random crops for MONAI (CropKey sampler + dataset wrapper)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPLv3" }
authors = [{ name = "Yakov Danishevsky" }]
dependencies = [
  "monai>=1.3",
  "torch>=2.0",
]

[project.urls]
Homepage = "https://www.github.com/yakovdan/planned-rand-crop"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
  "mypy>=1.5",
]